# SSRI-Evolution

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  activate_env.sh  pyproject.toml
.cursor/rules/: pythondatascience.mdc
breakfastPresi/: README.md  index.html
breakfastPresi/css/: custom.css
cemetry/K20/: K20_cluster_labels.json  K20meeting_alpha0.3_k20_res0.005.xlsx  cluster_tree_alpha0.3_k20_res0.005.json  cluster_tree_alpha0.3_k20_res0.005.xlsx  cluster_tree_alpha0.3_k20_res0.005_attempt2.json
notebooks/: 00-Introduction.ipynb  0000.ipynb  0000cleaning.ipynb  01-FullParameterFinder_ClusterExplorer.xlsx  01-RetrieveScopusData.ipynb  01.1-CleanScopusData.ipynb  02-CleanScopusData.ipynb  02-RetrieveCitationData.ipynb  02.1-CleanCitationData.ipynb  02.1-CleanScopusRetrievePubmed.ipynb  02.1-CleaningCitationData.ipynb  03-ConnectPapers.ipynb  03-RetrieveCitationData.ipynb  04-CreateTextEmbeddings.ipynb  05-ConnectPapers.ipynb  05-CreateNetworks.ipynb  05.1-CreatePajekNetwork.ipynb  06-DescriptiveStatistics.ipynb  07-CommunityDetection.ipynb  07-CreateNetworks.ipynb  07.1-CommunityCategorization.ipynb  07.1-CommunityCategorizationK10.ipynb  07.1-CommunityCategorizationK20.ipynb  07.1-CreatePajekNetwork.ipynb  08-AnalysisDatasetCreation.ipynb  08-CommunityPlotting.ipynb  08-DescriptiveStatistics.ipynb  08.1-AuxiliaryFiles.ipynb  09-ClusterProgressions.ipynb  09-CommunityDetection.ipynb  09.1-ClusterIntercon.ipynb  09.1-ClusterIntercon.py  09.1-Specialization.ipynb  09.2-Specialization.ipynb  09.3-ClusterInterconNew.ipynb  09.3-ClusterSpec.ipynb  10-CommunityAnalyzer.ipynb  10-CommunitySonification.ipynb  10-MainPathPrettier.ipynb  10-PostMainPathExplorer.ipynb  (+25 more)
notebooks/old/: 01-ReadAndCleanScopus.ipynb  04-MergeAndProcess.ipynb  05-RetrieveReferenceData.ipynb  06-TextEmbeddings.ipynb  06-TextEmbeddingsALLMPNET.ipynb  06-TextEmbeddingsSPECTER2.ipynb  07-CreateNetwork.ipynb  098-FetchAndCleanMedline.ipynb  099-FindExtraDOIs.ipynb
output/descriptive-stats-logs/: directed_network_info_log.json  directed_network_info_log_pajek.json  directed_network_info_log_pajek_2025.json  main_path_cluster_occurence.json  na_log_text_cols.json  na_log_text_cols_20250326.json  scopus_removal_log.json  scopus_removal_log_20250326_081230.json  weighted_network_info_log.json  weighted_network_info_log_20250326.json  weighted_network_info_log_20250401.json
output/figures/: cluster_proportions.html
output/paper-output/: descriptive_graph_directed_2025.json  descriptive_graph_hybrid_2025.json
scripts/: update_deps.py
src/data/: ScopusDataCleaner.py  ScopusProcessor.py  ScopusReferenceFetcherUtils.py
src/data_fetching/: ScopusApiKeyLoader.py  (+5 more)
(+151 files in other folders)
