[project]
name = "bibliometrics"
version = "0.1.0"
description = "A bibliometric analysis project"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "unidecode>=1.3.7",
    # Network analysis
    "networkx>=3.2.1",
    "igraph>=0.11.3",
    "leidenalg>=0.9.0",
    "python-louvain>=0.16",
    # Data processing and analysis
    "numpy>=1.26.4",
    "scikit-learn>=1.4.1",
    "fastparquet>=2024.2.0",
    "pyarrow>=15.0.0",
    # Web scraping and requests
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "urllib3>=2.2.1",
    # NLP and text processing
    "nltk>=3.8.1",
    "torch>=2.2.1",
    "transformers>=4.38.2",
    "adapters>=1.1.0",
    # Visualization
    "plotly>=5.19.0",
    "colorcet>=3.0.1",
    # Progress bars
    "tqdm>=4.66.2",
    # Parallel processing
    "dask>=2024.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "pyupgrade>=3.15.0",
    "pip-tools>=7.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88 